Fix microbenchmark using obsolete API